--- a/src/components/jumbotron/Jumbotron.css
+++ b/src/components/jumbotron/Jumbotron.css
@@ -1,13 +1,14 @@
-.container {
-    font-family: Montserrat, sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Arya:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+
+.container-grid{
     width: 100%;
-    padding-top: 10rem;
-    margin-left: 100px;
+    padding-top: 15rem;
     text-align: center;
-    justify-content: center;
+    align-items: center;
     display: inline-grid;
     grid-template-columns: 60% 30%;
-    /*grid-gap: 2rem;*/
+    overflow: hidden
 }
 
 #logo {
@@ -16,13 +17,70 @@
 }
 
 .item {
+    font-weight: 800;
+    font-family: Lato, sans-serif ;
+    color: #4A5461;
     font-size: 1.4rem;
     display: block;
     text-align: left;
-    padding: 0;
+    padding-left: 5rem;
     line-height: 2.5;
 }
 
 .item p {
+    /*color: #8C8C8C;*/
+    font-family: Arya, serif;
     margin-left: 10px;
+    font-weight: 300;
+}
+
+.container-flex {
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.input-group {
+    font-family: Montserrat, sans-serif;
+    width: 20rem;
+}
+
+.input-group-append .btn {
+    align-items: center;
+    justify-content: center;
+    background: #731E1C;
+    color: white;
+    border-radius: 0 5px 5px 0;
+}
+.input-group-append .btn:hover {
+    background: #8C8C8C;
+}
+
+.arrow {
+    height: 70px;
+    width: 70px;
+    margin: -25px;
+}
+
+.arrows {
+    display: flex;
+    flex-direction: column;
+    margin-top: 4rem;
+}
+
+.arrow-link{
+    color: #4A5461;
+}
+
+.arrow-link:hover {
+    color: #731E1C;
+}
+
+*:focus
+{
+    box-shadow: none !important;
+    outline: 0px;
 }
