--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -9,7 +9,9 @@
 #mainNavbar .nav-link{
     font-size: 1.5rem;
     font-weight: 600;
-    color: black;
+    color: #4A5461;
+    padding: 0;
+    margin: 8px 16px;
     /*margin-bottom: 5rem;*/
 }
 
@@ -36,6 +38,7 @@
 }
 
 .search_button {
+    color: #4A5461;
     margin-right: 13px;
 }
 
@@ -48,7 +51,7 @@
 }
 @keyframes fadeIn {
     0% {width:0;}
-    100% {width:308.8px;}
+    100% {width:231.6px;}
 }
 
 @-moz-keyframes fadeIn {
