--- a/src/components/jumbotron/Jumbotron.css
+++ b/src/components/jumbotron/Jumbotron.css
@@ -8,7 +8,7 @@
     align-items: center;
     display: inline-grid;
     grid-template-columns: 60% 30%;
-    overflow: hidden
+    overflow: hidden;
 }
 
 #logo {
@@ -20,7 +20,6 @@
     font-weight: 800;
     font-family: Lato, sans-serif ;
     color: #4A5461;
-    font-size: 1.4rem;
     display: block;
     text-align: left;
     padding-left: 5rem;
@@ -29,9 +28,16 @@
 
 .item p {
     /*color: #8C8C8C;*/
+    font-size: 1.4rem;
     font-family: Arya, serif;
     margin-left: 10px;
     font-weight: 300;
+}
+
+.item h1{
+    font-size: 3rem;
+    font-weight: 800;
+
 }
 
 .container-flex {
@@ -82,5 +88,107 @@
 *:focus
 {
     box-shadow: none !important;
-    outline: 0px;
+}
+
+@media all and (max-width: 1090px) {
+    .item {
+        padding-left: 2rem;
+    }
+
+    .item p {
+        font-size: 1rem;
+    }
+
+    .item h1 {
+        font-size: 2.3rem;
+    }
+
+    #logo {
+        height: 13rem;
+        width: 24rem;
+    }
+}
+
+@media all and (max-width: 966px) {
+    .item {
+        font-size: 0.1rem;
+    }
+    .item h1 {
+        font-size: 2rem;
+    }
+    .input-group {
+        width: 15rem;
+    }
+    #logo {
+        height: 9rem;
+        width: 16rem;
+        margin-bottom: 1rem;
+    }
+}
+
+@media all and (max-width: 669px) {
+    .container-grid{
+        display: flex;
+        flex-direction: column;
+        padding-top: 5rem;
+    }
+    .input-group {
+        font-family: Montserrat, sans-serif;
+        width: 10rem;
+        /*font-size: 0.1rem;*/
+    }
+
+    ::-webkit-input-placeholder {
+        font-size: 0.65rem;
+    }
+
+
+    .item{
+        padding: 0;
+        margin: 0;
+    }
+
+    .item h1 {
+        text-align: center;
+        font-size: 2.5rem;
+    }
+
+    .item p {
+        margin: 0;
+        text-align: center;
+        font-size: 1.1rem;
+    }
+
+    #logo{
+        height: 11rem;
+        width: 18rem;
+        margin: 0;
+    }
+}
+
+@media all and (max-width: 547px) {
+    .item p{
+        font-size: 1rem;
+    }
+    .item h1 {
+        font-size: 2rem;
+    }
+    #logo {
+        height: 9rem;
+        width: 16rem;
+        margin-bottom: 1rem;
+    }
+}
+
+@media all and (max-width: 390px) {
+    .item p {
+        font-size: 0.7rem;
+    }
+    .item h1 {
+        font-size: 1.5rem;
+    }
+
+    #logo {
+        margin: 3rem;
+    }
 }
