--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -75,3 +75,17 @@
 }
 
 
+@media all and (max-width: 991px) {
+    .form-control{
+        width: 100%;
+    }
+    .search_button{
+        margin-left: 0.7rem;
+        margin-top: 0.3rem;
+    }
+    #mainNavbar .nav-link:hover {
+        color: #731E1C;
+        border-bottom: none;
+        /*transition: border-bottom-width 250ms;*/
+    }
+}
