--- a/src/components/jumbotron/Jumbotron.css
+++ b/src/components/jumbotron/Jumbotron.css
@@ -3,7 +3,8 @@
 
 .container-grid{
     width: 100%;
-    padding-top: 15rem;
+    padding-top: 10rem;
+    height: 65vh;
     text-align: center;
     align-items: center;
     display: inline-grid;
@@ -43,8 +44,8 @@
 .container-flex {
     display: flex;
     flex-direction: column;
-    padding: 2rem;
-    justify-content: center;
+    padding: 1rem;
+    height: 35vh;
     align-items: center;
     width: 100%;
 }
