Added boiler plate for edit profile and fixed placeholder bug on Mozilla

--- a/src/components/jumbotron/Jumbotron.css
+++ b/src/components/jumbotron/Jumbotron.css
@@ -141,6 +141,9 @@
     ::-webkit-input-placeholder {
         font-size: 0.65rem;
     }
+    ::-moz-placeholder{
+        font-size: 0.65rem;
+    }
 
 
     .item{
