--- a/src/components/jumbotron/Jumbotron.css
+++ b/src/components/jumbotron/Jumbotron.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Arya:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
-.container-grid{
+.container-grid {
     width: 100%;
     padding-top: 10rem;
     height: 75vh;
@@ -28,7 +28,7 @@
 
 .item {
     font-weight: 800;
-    font-family: Lato, sans-serif ;
+    font-family: Lato, sans-serif;
     color: #4A5461;
     display: block;
     text-align: left;
@@ -44,7 +44,7 @@
     font-weight: 300;
 }
 
-.item h1{
+.item h1 {
     font-size: 3rem;
     font-weight: 800;
 
@@ -62,6 +62,7 @@
     color: white;
     border-radius: 0 5px 5px 0;
 }
+
 .input-group-append .btn:hover {
     background: #8C8C8C;
 }
@@ -78,7 +79,7 @@
     margin-top: 4rem;
 }
 
-.arrow-link{
+.arrow-link {
     color: #4A5461;
 }
 
@@ -86,8 +87,7 @@
     color: #731E1C;
 }
 
-*:focus
-{
+*:focus {
     box-shadow: none !important;
 }
 
@@ -114,12 +114,15 @@
     .item {
         font-size: 0.1rem;
     }
+
     .item h1 {
         font-size: 2rem;
     }
+
     .input-group {
         width: 15rem;
     }
+
     #logo {
         height: 9rem;
         width: 16rem;
@@ -128,11 +131,12 @@
 }
 
 @media all and (max-width: 669px) {
-    .container-grid{
+    .container-grid {
         display: flex;
         flex-direction: column;
         padding-top: 11rem;
     }
+
     .input-group {
         font-family: Montserrat, sans-serif;
         width: 10rem;
@@ -142,12 +146,13 @@
     ::-webkit-input-placeholder {
         font-size: 0.65rem;
     }
-    ::-moz-placeholder{
+
+    ::-moz-placeholder {
         font-size: 0.65rem;
     }
 
 
-    .item{
+    .item {
         padding: 0;
         margin: 0;
     }
@@ -163,7 +168,7 @@
         font-size: 1.1rem;
     }
 
-    #logo{
+    #logo {
         height: 11rem;
         width: 18rem;
         margin: 0;
@@ -171,12 +176,14 @@
 }
 
 @media all and (max-width: 547px) {
-    .item p{
+    .item p {
         font-size: 1rem;
     }
+
     .item h1 {
         font-size: 2rem;
     }
+
     #logo {
         height: 9rem;
         width: 16rem;
@@ -188,6 +195,7 @@
     .item p {
         font-size: 0.7rem;
     }
+
     .item h1 {
         font-size: 1.5rem;
     }
