--- a/src/components/accordian-profile/accordian-profile.css
+++ b/src/components/accordian-profile/accordian-profile.css
@@ -1,6 +1,7 @@
 .flex-column1 {
     font-family: Montserrat, sans-serif;
     display: flex;
+    flex-direction: column;
     margin: 5rem 0;
     justify-content: left;
     text-align: center;
