--- a/src/components/carousel/we-carousel.css
+++ b/src/components/carousel/we-carousel.css
@@ -1,49 +1,28 @@
-.carousel-item1 {
-    background-image: url("../../assets/books1.jpg");
-    height: 90vh;
-    width: 100vw;
-    display: flex;
-}
-.carousel-content{
-    width: 60vw;
-    justify-content: center;
-    align-items: center;
-    background: rgba(191, 190, 189, 0.82341);
-    color: black;
-    margin-top: 28vh;
-    margin-left: 19.4vw;
-}
-.carousel-item2 {
-    background-image: url("../../assets/books2.jpg");
-    height: 90vh;
-    width: 100vw;
-    display: flex;
-}
-
-.carousel-item4 {
-    background-image: url("../../assets/books1.jpg");
-    height: 90vh;
-    width: 100vw;
-    display: flex;
-}
-
-.carousel-item4 {
-    background-image: url("../../assets/books4.jpg");
-    height: 90vh;
-    width: 100vw;
-    display: flex;
-}
-
-h2 {
+h3 {
     text-align: center;
     font-size: 3.5rem;
+    color: black;
 }
 p{
-    font-size: 2.4rem;
+    font-size: 1.5rem;
     text-align: center;
+    color: black;
 }
 
+.carousel-item img {
+    padding: 4rem;
+    height: 500px;
+    width: auto !important;
+}
 
+.car-wrap {
+    padding: 2rem;
+    display: flex;
+    color: black;
+    flex-direction: row;
+    align-items: center;
+    background: rgba(191, 190, 198, 0.5);
+}
 @media all and (max-width: 825px) {
     h2 {
     text-align: center;
