--- a/src/components/course-card/course-card.css
+++ b/src/components/course-card/course-card.css
@@ -1,9 +1,17 @@
 .course{
     /*background: #BFBEBD;*/
     background: rgba(191, 190, 189, 0.5);
+    display: flex;
 }
 
 .course img {
     padding: 0.35rem;
     border-radius: 10px;
+}
+
+.card-button {
+    height: 7rem;
+    display: flex;
+    align-items: end;
+    justify-content: center;
 }
