- added progress in buttons  - fixed minor bug and optimized imports

--- a/src/components/course-card/course-card.css
+++ b/src/components/course-card/course-card.css
@@ -12,6 +12,6 @@
 .card-button {
     height: 7rem;
     display: flex;
-    align-items: end;
+    align-items: flex-end;
     justify-content: center;
 }
