--- a/src/components/jumbotron/Jumbotron.css
+++ b/src/components/jumbotron/Jumbotron.css
@@ -8,6 +8,7 @@
     background: -webkit-linear-gradient(top, rgba(255, 255, 255, 1.0), rgba(84, 84, 84, 1.0));
     background: -moz-linear-gradient(top, rgba(255, 255, 255, 1.0), rgba(84, 84, 84, 1.0));
     background: linear-gradient(to bottom, rgba(255, 255, 255, 1.0), rgba(84, 84, 84, 1.0));
+    padding-bottom: 4rem;
 }
 .container-grid {
     width: 100%;
@@ -208,3 +209,17 @@
         margin: 1rem;
     }
 }
+
+.Typist .Cursor {
+    display: inline-block; }
+.Typist .Cursor--blinking {
+    opacity: 1;
+    animation: blink 1s linear infinite; }
+
+@keyframes blink {
+    0% {
+        opacity: 1; }
+    50% {
+        opacity: 0; }
+    100% {
+        opacity: 1; } }
