--- a/src/components/carousel/we-carousel.css
+++ b/src/components/carousel/we-carousel.css
@@ -19,18 +19,39 @@
     align-items: center;
     background: rgba(191, 190, 198, 0);
 }
+
+@media all and (max-width: 900px) {
+    .car-wrap{
+        flex-direction: column;
+    }
+
+    .carousel-item img {
+        padding: 4rem;
+        height: 500px;
+        width: auto !important;
+    }
+}
+
+
 @media all and (max-width: 825px) {
-    h2 {
-    text-align: center;
-    font-size: 3.5rem;
+        h2 {
+        text-align: center;
+        font-size: 3.5rem;
+        }
+        p{
+        font-size: 2.4rem;
+        text-align: center;
+        }
+        .carousel-content{
+        margin-top: 12vh;
+        }
 }
-    p{
-    font-size: 2.4rem;
-    text-align: center;
-}
-    .carousel-content{
-    margin-top: 12vh;
-}
+
+@media all and (max-width: 650px){
+    .carousel-item img {
+        padding: 2rem;
+        height: 410px;
+    }
 }
 
 @media all and (max-width: 550px){
@@ -43,6 +64,9 @@
     .carousel-content{
         margin-top: 10vh;
     }
+    .carousel-item img {
+        height: 330px;
+    }
 }
 
 @media all and (max-width: 425px){
@@ -54,6 +78,9 @@
     }
     .carousel-content{
         margin-top: 10vh;
+    }
+    .carousel-item img {
+        height: 270px;
     }
 }
 
