--- a/src/components/course-card/course-card.css
+++ b/src/components/course-card/course-card.css
@@ -1,4 +1,4 @@
-.course{
+.course {
     /*background: #BFBEBD;*/
     background: rgba(191, 190, 189, 0.5);
     display: flex;
@@ -11,8 +11,7 @@
 }
 
 .card-button {
-    height: 7rem;
     display: flex;
-    align-items: flex-end;
-    justify-content: center;
+    align-items: center;
+    justify-content: flex-end;
 }
