--- a/src/components/carousel/we-carousel.css
+++ b/src/components/carousel/we-carousel.css
@@ -1,13 +1,13 @@
 .carousel-item p{
     font-family: Lato, sans-serif;
-    font-size: 1.5rem;
+    font-size: 2rem;
     text-align: center;
     color: black;
 }
 
 .carousel-item img {
     padding: 4rem;
-    height: 500px;
+    height: 600px;
     width: auto !important;
 }
 
@@ -18,9 +18,14 @@
     flex-direction: row;
     align-items: center;
     background: rgba(191, 190, 198, 0);
+
 }
 
-@media all and (max-width: 1060px) {
+@media all and (max-width: 1260px) {
+    .carousel-item p{
+        font-size: 1.5rem;
+    }
+
     .car-wrap{
         flex-direction: column;
     }
@@ -34,12 +39,8 @@
 
 
 @media all and (max-width: 825px) {
-        h2 {
-        text-align: center;
-        font-size: 3.5rem;
-        }
-        p{
-        font-size: 2.4rem;
+        .carousel-item p{
+        font-size: 1.2rem;
         text-align: center;
         }
         .carousel-content{
@@ -52,15 +53,12 @@
         padding: 2rem;
         height: 410px;
     }
+    .carousel-item p {
+        font-size: 1rem;
+    }
 }
 
 @media all and (max-width: 550px){
-    h2 {
-        font-size: 3rem;
-    }
-    p{
-        font-size: 2rem;
-    }
     .carousel-content{
         margin-top: 10vh;
     }
@@ -70,12 +68,6 @@
 }
 
 @media all and (max-width: 425px){
-    h2 {
-        font-size: 2rem;
-    }
-    p{
-        font-size: 1.5rem;
-    }
     .carousel-content{
         margin-top: 10vh;
     }
