--- a/src/components/jumbotron/Jumbotron.css
+++ b/src/components/jumbotron/Jumbotron.css
@@ -5,11 +5,19 @@
     z-index: -5;
     /*background: -webkit-linear-gradient(to bottom, #fff, #bfbebd);  !* Chrome 10-25, Safari 5.1-6 *!*/
     /*background: linear-gradient(to bottom, #fff,  #bfbebd); !* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ *!*/
-    background: rgba(255, 255, 255, 1.0);
-    background: -webkit-linear-gradient(top, rgba(255, 255, 255, 1.0), rgba(84, 84, 84, 1.0));
-    background: -moz-linear-gradient(top, rgba(255, 255, 255, 1.0), rgba(84, 84, 84, 1.0));
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 1.0), rgba(84, 84, 84, 1.0));
+    /*background: rgba(255, 255, 255, 1.0);*/
+    /*background: -webkit-linear-gradient(top, rgba(255, 255, 255, 1.0), rgba(84, 84, 84, 1.0));*/
+    /*background: -moz-linear-gradient(top, rgba(255, 255, 255, 1.0), rgba(84, 84, 84, 1.0));*/
+    /*background: linear-gradient(to bottom, rgba(255, 255, 255, 1.0), rgba(84, 84, 84, 1.0));*/
     padding-bottom: 4rem;
+}
+
+.rootJumbo {
+    background-image: url("../../assets/bg7.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
 }
 
 .container-grid {
@@ -18,8 +26,8 @@
     height: 75vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-start;
+    align-items: flex-start;
     overflow: hidden;
 }
 
@@ -30,52 +38,6 @@
     height: 25vh;
     align-items: center;
     width: 100%;
-}
-
-#logo {
-    height: 15rem;
-    width: 27rem;
-}
-
-.item {
-    font-weight: 800;
-    font-family: Lato, sans-serif;
-    color: #4A5461;
-    display: block;
-    text-align: left;
-    padding-left: 5rem;
-    line-height: 2.5;
-}
-
-.item p {
-    /*color: #8C8C8C;*/
-    font-size: 1rem;
-    font-family: Arya, serif;
-    margin-left: 10px;
-    font-weight: 300;
-}
-
-.item h1 {
-    font-size: 2rem;
-    font-weight: 800;
-
-}
-
-.input-group {
-    font-family: Montserrat, sans-serif;
-    width: 20rem;
-}
-
-.input-group-append .btn {
-    align-items: center;
-    justify-content: center;
-    background: black;
-    color: white;
-    border-radius: 0 5px 5px 0;
-}
-
-.input-group-append .btn:hover {
-    background: #8C8C8C;
 }
 
 .arrow {
@@ -98,46 +60,47 @@
     color: #731E1C;
 }
 
+.mainHeading {
+    margin-left: 7rem;
+    color: #731E1C;
+    font-family: Montserrat, sans-serif;
+    font-size: 6rem;
+    letter-spacing: 0.5rem;
+    font-weight: 500;
+}
+
+.subHeading {
+    margin-left: 7rem;
+    font-size: 1.7rem;
+    font-family: Arya, serif;
+    font-weight: 700;
+}
+
 *:focus {
     box-shadow: none !important;
 }
 
-@media all and (max-width: 1090px) {
-    .item {
-        padding-left: 2rem;
+@media all and (max-width: 1224px) {
+    .mainHeading {
+        margin-left: 3rem;
+        font-size: 5rem;
     }
 
-    .item p {
-        font-size: 1rem;
-    }
-
-    .item h1 {
-        font-size: 2.3rem;
-    }
-
-    #logo {
-        height: 13rem;
-        width: 24rem;
+    .subHeading {
+        margin-left: 3rem;
+        font-size: 1.5rem;
     }
 }
 
-@media all and (max-width: 966px) {
-    .item {
-        font-size: 0.1rem;
+@media all and (max-width: 991px) {
+    .mainHeading {
+        margin-left: 3rem;
+        font-size: 4rem;
     }
 
-    .item h1 {
-        font-size: 2rem;
-    }
-
-    .input-group {
-        width: 15rem;
-    }
-
-    #logo {
-        height: 9rem;
-        width: 16rem;
-        margin-bottom: 1rem;
+    .subHeading {
+        margin-left: 3rem;
+        font-size: 1.25rem;
     }
 }
 
@@ -182,35 +145,53 @@
     }
 }
 
-@media all and (max-width: 501px) {
-    .item p {
+@media all and (max-width: 768px) {
+    .mainHeading {
+        width: 70vw;
+        margin-left: 2rem;
+        font-size: 3.5rem;
+        margin-bottom: 2rem;
+    }
+
+    .subHeading {
+        width: 70vw;
+        margin-left: 2rem;
         font-size: 1rem;
     }
+}
 
-    .item h1 {
-        font-size: 2rem;
+@media all and (max-width: 662px) {
+    .mainHeading {
+        margin-left: 1rem;
+        font-size: 3.5rem;
     }
 
-    #logo {
-        height: 9rem;
-        width: 16rem;
-        margin-bottom: 1rem;
+    .subHeading {
+        margin-left: 1rem;
+        font-size: 1rem;
     }
 }
 
-@media all and (max-width: 390px) {
-    .item p {
-        font-size: 0.7rem;
+@media all and (max-width: 598px) {
+    .mainHeading {
+        /*word-break: break-word;*/
+        margin-left: 1rem;
+        font-size: 3.25rem;
     }
 
-    .item h1 {
-        font-size: 1.5rem;
-    }
-
-    #logo {
-        margin: 1rem;
-    }
+    /*.subHeading {*/
+    /*    margin-left: 3rem;*/
+    /*    font-size: 1.25rem;*/
+    /*}*/
 }
+
+@media all and (max-width: 392px){
+    .mainHeading {
+        width: 100vw;
+    }
+
+}
+
 
 .Typist .Cursor {
     display: inline-block; }
