--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,39 +1,63 @@
-#mainNavbar {
+.navbar {
     font-size: 1.5rem;
     color: black;
     align-items: center;
     margin-bottom: 10px;
     font-family: Montserrat, sans-serif;
+    background-color: white !important;
 }
 
-#mainNavbar .nav-link {
-    font-size: 1.5rem;
-    font-weight: 600;
+.navbar-active {
+    background-color: transparent !important;
+}
+
+.nav-link {
+    font-size: 1.75rem;
+    font-weight: 500;
     color: #4A5461;
     padding: 0;
-    margin: 8px 16px;
+    margin: 5px 10px;
     /*margin-bottom: 5rem;*/
 }
 
-
-#mainNavbar .nav-link:hover {
+.nav-link:hover {
     color: #731E1C;
     border-bottom: #8C8C8C solid 0.3rem;
     transition: border-bottom-width 250ms;
 }
 
-#mainNavbar.scroll {
-    background: rgb(0, 0, 0);
-    transition: background 500ms;
+.nav-link-active {
+    font-size: 1.75rem;
+    font-weight: 500;
+    color: white;
+    padding: 0;
+    margin: 5px 10px;
 }
 
-.brand_logo {
+.nav-link-active:hover {
+    color: gray;
+    border-bottom: #8C8C8C solid 0.3rem;
+    transition: border-bottom-width 250ms;
+}
+
+.brand-logo {
     /*height: '3.6rem',*/
     /*width: '8rem',*/
     /*margin: '0 1rem 0 0',*/
     /*padding: '10px'*/
     height: 3rem;
-    width: 6rem;
+    width: 5rem;
+    margin: 0 1rem 0 0;
+
+}
+
+.brand-logo-active {
+    /*height: '3.6rem',*/
+    /*width: '8rem',*/
+    /*margin: '0 1rem 0 0',*/
+    /*padding: '10px'*/
+    height: 5rem;
+    width: 9rem;
     margin: 0 1rem 0 0;
 }
 
@@ -42,7 +66,16 @@
     margin-right: 13px;
 }
 
+.search_button-active {
+    color: white;
+    margin-right: 13px;
+}
+
 .search_button:hover {
+    color: #731E1C;
+}
+
+.search_button-active:hover {
     color: #731E1C;
 }
 
