--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -20,10 +20,18 @@
     margin-left: 5rem;
 }
 
-.about-container{
+.about-container1{
     background: #f0f0f0;
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.about-container2{
+    padding: 2rem;
+    display: flex;
+    background: #f5f5f5;
     align-items: center;
     justify-content: space-evenly;
 }
@@ -56,7 +64,29 @@
 }
 
 
-@media all and (max-width: 1014px) {
+.about-container2 img{
+    border-radius:  100%;
+    padding-left: 2rem;
+}
+
+.pdc-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1.2rem;
+}
+
+@media all and (max-width: 1214px){
+    .about-container2 img{
+        height: 70%;
+        width: 40%;
+    }
+    .content .heading h3{
+        letter-spacing: 0;
+    }
+}
+
+@media all and (max-width: 1050px) {
     .content .heading h3{
         font-size: 1.3rem;
     }
@@ -66,22 +96,33 @@
     }
 }
 
-@media all and (max-width: 820px) {
+@media all and (max-width: 851px) {
     .content{
         padding-left: 0;
+        width: 100%;
+
+        text-align: center;
+        padding-right: 0;
+        font-size: 16px;
+    }
+    .about-container2{
+        flex-direction: column-reverse;
+    }
+    .about-container2 img{
+        height: 100%;
+        width: 70%;
+        margin-bottom: 2rem;
+    }
+
+    .content .heading h3{
+        margin-left: 2.9rem;
     }
     .heading-panel .heading{
         text-align: center;
         margin-left: 11rem;
     }
-    .about-container{
-        /*grid-template-columns: 1fr;*/
+    .about-container1{
         flex-direction: column;
-    }
-    .content{
-        text-align: center;
-        padding-right: 0;
-        font-size: 12px;
     }
     .heading span{
         font-size: 1.5rem;
@@ -91,13 +132,16 @@
         font-size: 1rem;
     }
 
-    .content{
-        width: 100%
+    .pdc-logo{
+        height: 25rem;
+        width: 35rem;
     }
 }
 
 @media all and (max-width: 553px) {
-
+    .content{
+        font-size: 14px;
+    }
     .content .heading h3 {
         font-size: 1rem;
     }
@@ -118,5 +162,13 @@
     }
     .image-container img{
         margin-left: 0;
+    }
+    .about-container2 img{
+        height: 100%;
+        width: 100%;
+    }
+    .pdc-logo{
+        height: 11rem;
+        width: 18rem;
     }
 }
