--- a/src/components/numbers/numbers.css
+++ b/src/components/numbers/numbers.css
@@ -1,54 +1,131 @@
-.container {
-    width: 100% !important;
+.iHeader h1{
+    text-align: center;
+    font-family: Montserrat, sans-serif;
+    letter-spacing: 0.2rem;
+    padding-top: 1.5rem;
+    font-weight: bolder;
+}
+
+.num-container{
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(min(17rem, 100%), 1fr));
-    gap: 4rem;
-    /*grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;*/
-    text-align: center;
-    align-items: center;
+    /*grid-template-columns: repeat(auto-fill, minmax(min(17rem, 100%), 1fr));*/
+    grid-template-columns: repeat(3, 1fr);
+}
+.iCard{
+    display: flex;
     justify-content: center;
-    margin-top: -1.5rem;
+    align-items: center;
 }
 
-.iHeader{
-    text-align: center;
+.iNum{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+    font-size: 8rem;
+    color: #da8088;
     font-weight: bolder;
-    text-transform: uppercase;
-    font-size: 2.5rem;
 }
 
-.num-style{
-    font-size: 10rem;
-    z-index: -99;
-    margin-top: 0.1rem;
-    font-weight: bolder;
-    color: rgba(150, 95, 95, 0.3);
-}
-
-.iTitle{
-    margin-top: -8.8rem;
-    z-index: 10;
+.iTitle {
+    display: flex;
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    z-index: 20;
+    margin-left: -32rem;
     font-size: 2rem;
+    color: #343a40;
+    text-align: center;
     text-transform: uppercase;
-    font-weight: bolder;
 }
-
-/*@media all and (max-width: 767px){*/
-/*    .container{*/
-/*        !*grid-template-columns: repeat(2, 1fr);*!*/
-/*    }*/
-/*}*/
-
-@media all and (max-width: 425px) {
-    .num-style{
-        font-size: 7rem;
-        margin-bottom: 2rem;
+@media all and (max-width: 1410px) {
+    .iTitle{
+        margin-left: -28rem;
+    }
+}
+@media all and (max-width: 1210px){
+    .iTitle{
+        margin-left: -25rem;
+        font-size: 1.5rem;
+    }
+}
+@media all and (max-width: 1090px) {
+    .iTitle{
+        margin-left: -21rem;
+    }
+}
+@media all and (max-width: 950px) {
+    .iTitle{
+        margin-left: -18rem;
+    }
+}
+@media all and (max-width: 820px){
+    .iTitle{
+        font-size: 1.6rem;
+        margin-left: -16rem;
+    }
+}
+@media all and (max-width: 720px) {
+    .iTitle{
+        margin-left: -14rem;
+    }
+}
+@media all and (max-width: 610px) {
+    .iTitle{
+        font-size: 1.4rem;
+        margin-left: -12rem;
+    }
+}
+@media all and (max-width: 555px) {
+    .iHeader h1{
+        font-size: 1.8rem;
+    }
+    .num-container{
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .iNum{
+        font-size: 5rem;
+        font-weight: bold;
     }
     .iTitle{
-        font-size: 1rem;
-        margin-top: -7.8rem;
+        font-size: 1.1rem;
+        margin-left: -16rem;
     }
-    .iHeader{
-        font-size: 1.5rem;
+}
+@media all and (max-width: 490px) {
+    .iTitle{
+        margin-left: -14rem;
+    }
+}
+@media all and (max-width: 445px) {
+    .num-container{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .iTitle{
+        margin-left: -27rem;
+    }
+}
+@media all and (max-width: 417px) {
+    .iTitle{
+        margin-left: -24rem;
+    }
+}
+@media all and (max-width: 360px) {
+    .iTitle{
+        margin-left: -21rem;
+    }
+}
+@media all and (max-width: 325px){
+    .iTitle{
+        margin-left: -19.5rem;
+    }
+}
+@media all and (max-width: 300px){
+    .iTitle{
+        margin-left: -15rem;
     }
 }
