--- a/src/components/course-page/course-page.css
+++ b/src/components/course-page/course-page.css
@@ -76,7 +76,7 @@
     display: flex;
     flex-direction: column;
     margin: 5rem 0 2rem;
-    width: 20%;
+    width: 25%;
     height: 86vh;
 }
 
@@ -87,7 +87,7 @@
 }
 
 .coursePayment ul {
-    line-height: 192%;
+    line-height: 170%;
     color: #0000008C;
 }
 
@@ -167,6 +167,10 @@
         margin: 0;
         width: 100%;
         height: 100%;
+    }
+
+    .coursePayment ul {
+        width: 20rem;
     }
 }
 
