--- a/src/components/jumbotron/Jumbotron.css
+++ b/src/components/jumbotron/Jumbotron.css
@@ -51,6 +51,8 @@
     display: flex;
     flex-direction: column;
     margin-top: 4rem;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .arrow-link {
